# cad-llm

./: .env.example  .gitignore  LICENSE  Makefile  README.md  overview.md  pyproject.toml
.cursor/rules/: rules.mdc
app/: main.py
docs/: AGENT.md
infra/: docker-compose.yml
infra/docs/: README.md
scripts/: verify_env.sh
src/cad_llm/: __init__.py  cli.py  config.py
src/cad_llm/agent/: __init__.py  bootstrap.py  display.py  generate.py  implement.py  orchestrator.py  parse.py  prompts.py  recovery.py  research.py  runner.py  session.py  steps.py  subagent.py  summary.py  transcript.py
src/cad_llm/app/: __init__.py  activity_block.py  formatting.py  mesh.py  phase_block.py  theme.py  viewer.py  window.py
src/cad_llm/cad/: __init__.py  execute.py
src/cad_llm/data/: __init__.py  bench.py  text2cadquery.py  tokens.py
src/cad_llm/docs/: index.py  loader.py  search.py  store.py
src/cad_llm/eval/: __init__.py  bench.py
src/cad_llm/inference/: __init__.py  extract.py  generate.py
src/cad_llm/tools/: __init__.py  binding.py  registry.py
src/cad_llm/training/: __init__.py  sft.py
tests/: test_agent_bootstrap.py  test_agent_parse.py  test_agent_recovery.py  test_agent_runner.py  test_agent_state.py  test_agent_summary.py  test_app_formatting.py  test_app_mesh.py  test_bench.py  test_binding.py  test_bootstrap.py  test_data.py  test_docs_loader.py  test_edit_tools.py  test_extract.py  test_generate.py  test_orchestrator.py  test_sandbox_tools.py  test_skills.py  test_subagent.py  test_transcript_history.py  test_workspace.py
(+18 files in other folders)
